[gd_scene load_steps=30 format=3 uid="uid://ccmx3km157wgr"]

[ext_resource type="Script" path="res://Scripts/Enemies/wolf.gd" id="1_fmd5u"]
[ext_resource type="Texture2D" uid="uid://b7acn8bv1h2mh" path="res://Assets/Enemies/Wolf/Pale Wolf/Canine_White_Full_FX.png" id="3_8uxau"]
[ext_resource type="Script" path="res://Scripts/Enemies/wall_check.gd" id="4_n4io6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nfbtf"]
atlas = ExtResource("3_8uxau")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5oguu"]
atlas = ExtResource("3_8uxau")
region = Rect2(240, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxh23"]
atlas = ExtResource("3_8uxau")
region = Rect2(0, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm7xb"]
atlas = ExtResource("3_8uxau")
region = Rect2(48, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgja1"]
atlas = ExtResource("3_8uxau")
region = Rect2(96, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hah3r"]
atlas = ExtResource("3_8uxau")
region = Rect2(144, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1ok3"]
atlas = ExtResource("3_8uxau")
region = Rect2(192, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kinuy"]
atlas = ExtResource("3_8uxau")
region = Rect2(144, 96, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0lwr"]
atlas = ExtResource("3_8uxau")
region = Rect2(192, 96, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnxlj"]
atlas = ExtResource("3_8uxau")
region = Rect2(240, 96, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mygyf"]
atlas = ExtResource("3_8uxau")
region = Rect2(0, 128, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5fvk"]
atlas = ExtResource("3_8uxau")
region = Rect2(48, 128, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5kal"]
atlas = ExtResource("3_8uxau")
region = Rect2(96, 128, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v60ku"]
atlas = ExtResource("3_8uxau")
region = Rect2(144, 128, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5wcg"]
atlas = ExtResource("3_8uxau")
region = Rect2(192, 128, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ci5q"]
atlas = ExtResource("3_8uxau")
region = Rect2(240, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3f1f"]
atlas = ExtResource("3_8uxau")
region = Rect2(0, 64, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_euupj"]
atlas = ExtResource("3_8uxau")
region = Rect2(48, 64, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hq3qq"]
atlas = ExtResource("3_8uxau")
region = Rect2(96, 64, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibjkt"]
atlas = ExtResource("3_8uxau")
region = Rect2(144, 64, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcwi6"]
atlas = ExtResource("3_8uxau")
region = Rect2(192, 64, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4w2gx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfbtf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5oguu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxh23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm7xb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgja1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hah3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1ok3")
}],
"loop": false,
"name": &"Attack",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kinuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0lwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnxlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mygyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5fvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5kal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v60ku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5wcg")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ci5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3f1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_euupj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq3qq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibjkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcwi6")
}],
"loop": true,
"name": &"Walking",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jg36y"]
size = Vector2(38.1818, 23)

[sub_resource type="CircleShape2D" id="CircleShape2D_b3qy1"]
radius = 192.167

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t80hp"]
height = 38.1818

[sub_resource type="CircleShape2D" id="CircleShape2D_x7cqp"]
radius = 800.0

[node name="Wolf" type="CharacterBody2D"]
scale = Vector2(1.1, 1.1)
collision_layer = 6
collision_mask = 33
script = ExtResource("1_fmd5u")
speed = 160.0
damage = 4
health = 12

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_4w2gx")
animation = &"Attack"
autoplay = "Walking"
frame = 6
frame_progress = 1.0
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.81818)
shape = SubResource("RectangleShape2D_jg36y")

[node name="Targeting" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Targeting"]
shape = SubResource("CircleShape2D_b3qy1")

[node name="WallCheck" type="RayCast2D" parent="."]
modulate = Color(0.913725, 0.0627451, 0.0941176, 1)
collide_with_areas = true
script = ExtResource("4_n4io6")

[node name="attentionTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_t80hp")

[node name="FrenzyRange" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrenzyRange"]
shape = SubResource("CircleShape2D_x7cqp")

[connection signal="body_entered" from="Targeting" to="." method="_on_targeting_body_entered"]
[connection signal="body_exited" from="Targeting" to="." method="_on_targeting_body_exited"]
[connection signal="isColliding" from="WallCheck" to="." method="_on_wall_check_is_colliding"]
[connection signal="notColliding" from="WallCheck" to="." method="_on_wall_check_not_colliding"]
[connection signal="timeout" from="attentionTimer" to="." method="_on_attention_timer_timeout"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="body_entered" from="FrenzyRange" to="." method="_on_frenzy_range_body_entered"]
[connection signal="body_exited" from="FrenzyRange" to="." method="_on_frenzy_range_body_exited"]
